--- a/webApp/app/index.html
+++ b/webApp/app/index.html
@@ -1,31 +1,61 @@
-<html dir="ltr" lang="en">
-  <head>
-    <title>Will</title>
-    <meta charset="utf-8">
-  </head>
+<!DOCTYPE html>
+<html lang="en" >
 
+<head>
+  <meta charset="UTF-8">
+  <title>Contract Unlock</title>
+  
+  
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 
-  <body>
+      <link rel="stylesheet" href="css/style.css">
 
-    <!-- Header -->
-    <div>
-      Decentraziled Will
+  
+</head>
+
+<body>
+
+  
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="container">
+
+          <div class="masthead clearfix">
+            <div class="container inner">
+              <h3 class="masthead-brand">Decentraziled Will</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <!-- <h1 class="cover-heading">Jack's Contract</h1>
+            <p class="lead">First half of the password: </p>
+            <p class="lead">Second half of the password: </p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">Withdraw</a>
+            </p> -->
+            <script src="javascripts/app.js"></script>
+            First half of password:<input name="FirstHalf" placeholder="1st Half" style="width: 150px; height:30px" type="text">
+            <br>
+            Second half of password:<input name="SecondHalf" placeholder="2nd Half" style="width: 150px; height:30px" type="text">
+            <br>
+            <button id="withdrawButton" style="width: 150px; height:30px">Withdraw</button>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
+  
+  
 
-    <!--Data Entry Div -->
-    <div>
-      <script src="javascripts/app.js"></script>
-      First half of password:<input name="FirstHalf" placeholder="1st Half" style="width: 150px; height:30px" type="text">
-      <br>
-      Second half of password:<input name="SecondHalf" placeholder="2nd Half" style="width: 150px; height:30px" type="text">
-      <br>
-      <button id="withdrawButton" style="width: 150px; height:30px">Withdraw</button>
-    </div>
-
-    <!--Results-->
-    <div id="withdrawResult"></div>
-
-
-  </body>
+</body>
 
 </html>
