making the button not shit

--- a/webApp/app/index.html
+++ b/webApp/app/index.html
@@ -45,7 +45,10 @@
             <br>
             Second half of password:<input name="SecondHalf" placeholder="2nd Half" style="width: 150px; height:30px" type="text">
             <br>
-            <button id="withdrawButton" style="width: 150px; height:30px">Withdraw</button>
+            <!-- <button id="withdrawButton" style="width: 150px; height:30px">Withdraw</button> -->
+            <p class="lead">
+              <button id="withdrawButton" class="btn btn-lg btn-default">Withdraw</a>
+            </p>
           </div>
 
         </div>
