--- a/webApp/app/index.html
+++ b/webApp/app/index.html
@@ -34,17 +34,32 @@
           </div>
 
           <div class="inner cover">
+
             <!-- <h1 class="cover-heading">Jack's Contract</h1>
             <p class="lead">First half of the password: </p>
             <p class="lead">Second half of the password: </p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Withdraw</a>
             </p> -->
+
             <script src="javascripts/app.js"></script>
-            First half of password:<input name="FirstHalf" placeholder="1st Half" style="width: 150px; height:30px" type="text">
+
+            <!-- First half of password:<input name="FirstHalf" placeholder="1st Half" style="width: 150px; height:30px" type="text"> -->
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="First half of the password" /> 
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Enter</button>
+                        </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-4 -->
+            </div><!-- /.row -->
+
             <br>
             Second half of password:<input name="SecondHalf" placeholder="2nd Half" style="width: 150px; height:30px" type="text">
             <br>
+
             <!-- <button id="withdrawButton" style="width: 150px; height:30px">Withdraw</button> -->
             <p class="lead">
               <button id="withdrawButton" class="btn btn-lg btn-default">Withdraw</a>
