--- a/webApp/app/index.html
+++ b/webApp/app/index.html
@@ -48,16 +48,21 @@
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="First half of the password" /> 
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Enter</button>
-                        </span>
+                        <input name="FirstHalf" type="text" class="form-control" placeholder="First half of the password" /> 
                     </div><!-- /input-group -->
                 </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
+            <br>
 
             <br>
-            Second half of password:<input name="SecondHalf" placeholder="2nd Half" style="width: 150px; height:30px" type="text">
+            <!-- Second half of password:<input name="SecondHalf" placeholder="2nd Half" style="width: 150px; height:30px" type="text"> -->
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <div class="input-group">
+                        <input name="SecondHalf" type="text" class="form-control" placeholder="Second half of the password" /> 
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-4 -->
+            </div><!-- /.row -->
             <br>
 
             <!-- <button id="withdrawButton" style="width: 150px; height:30px">Withdraw</button> -->
