I barely know what I'm doing anymore

--- a/takeTwo/app/index.html
+++ b/takeTwo/app/index.html
@@ -42,20 +42,13 @@
               <a href="#" class="btn btn-lg btn-default">Withdraw</a>
             </p> -->
 
-            <script src="javascripts/app.js" type="module"></script>
+            <script src="app.js"></script>
 
             <!-- First half of password:<input name="FirstHalf" placeholder="1st Half" style="width: 150px; height:30px" type="text"> -->
             <div class="row">
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="input-group">
-<<<<<<< HEAD
-                        <input name="FirstHalf" type="text" class="form-control" placeholder="First half of the password" /> 
-=======
-                        <input type="text" class="form-control" placeholder="First half of the password" />
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Enter</button>
-                        </span>
->>>>>>> c5627c025dbf2edc5e8af468d864f718fe551c88
+                        <input name="FirstHalf" type="text" class="form-control" placeholder="First half of the password" />
                     </div><!-- /input-group -->
                 </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
@@ -66,7 +59,7 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-4">
                     <div class="input-group">
-                        <input name="SecondHalf" type="text" class="form-control" placeholder="Second half of the password" /> 
+                        <input name="SecondHalf" type="text" class="form-control" placeholder="Second half of the password" />
                     </div><!-- /input-group -->
                 </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
